<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@drawable/bg_lower"
    android:paddingBottom="20dp"
    android:layout_marginHorizontal="10dp"
    android:paddingHorizontal="80dp"
    android:layout_gravity="center_horizontal"
    android:gravity="center_horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/chooseOne"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:layout_marginTop="10dp"/>



        <com.google.android.material.button.MaterialButton

            android:id="@+id/btn_call"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/call"
            android:layout_marginTop="10dp"
            android:textColor="@color/black"
            app:backgroundTint="@color/light_green"
            app:cornerRadius="30dp"
            app:icon="@drawable/ic_phone"
            app:iconTint="@color/black"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_sendMail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/editEmail"
            android:textColor="@color/white"
            app:cornerRadius="30dp"
            app:icon="@drawable/ic_email"
            app:backgroundTint="@color/light_red"
            app:iconTint="@color/black" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_locate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/locate"
            android:textColor="@color/white"
            app:cornerRadius="30dp"
            app:icon="@drawable/ic_location"
            app:iconTint="@color/black" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_msg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/message"
            android:textColor="@color/white"
            app:backgroundTint="@color/blue"
            app:cornerRadius="30dp"
            app:icon="@drawable/ic_email"
            app:iconTint="@color/white" />

</LinearLayout>