<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="20dp"
    android:gravity="center"
    android:background="#CAECFD">

    <com.google.android.material.imageview.ShapeableImageView
            android:layout_width="360dp"
            android:layout_height="100dp"
            app:strokeColor="@color/white"
            app:strokeWidth="2dp"
            android:background="@color/Primary"
            android:src="@drawable/img_shop"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:text="@string/shopLogin"
        android:textSize="40sp"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginLeft="5dp"
        android:fontFamily="@font/my_fav_sans_number"
        android:text="@string/shop_login_create"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:layout_marginStart="5dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="5dp"
        android:layout_gravity="start"
        android:gravity="clip_horizontal"
        android:fontFamily="@font/my_fav_sans_number"
        android:text="@string/shop_login_cancel"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:layout_marginStart="5dp" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="5dp"
        android:layout_gravity="start"
        android:fontFamily="@font/my_fav_sans_number"
        android:text="@string/shop_login_disable"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:layout_marginStart="5dp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/bt_cancel"
            android:text="@string/login_cancel"
            android:textStyle="bold"
            style="@android:style/TextAppearance.DeviceDefault.Medium"
            android:textSize="15sp"
            android:textColor="@color/black"
            android:layout_margin="10dp"
            android:autoSizeTextType="uniform"
            android:backgroundTint="@color/Primary_light"
            tools:ignore="UnusedAttribute" />


        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/btn_disable"
            android:text="@string/login_disable"
            android:textStyle="bold"
            android:textSize="15sp"
            android:textColor="@color/black"
            android:layout_margin="10dp"
            android:autoSizeTextType="uniform"
            style="@android:style/TextAppearance.DeviceDefault.Medium"
            android:backgroundTint="@color/light_red"
            tools:ignore="UnusedAttribute" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/bt_ok"
            android:text="@string/login_login"
            android:textStyle="bold"
            android:textSize="15sp"
            android:textColor="@color/black"
            android:layout_margin="10dp"
            android:autoSizeTextType="uniform"
            style="@android:style/TextAppearance.DeviceDefault.Medium"
            android:backgroundTint="@color/light_green"
            tools:ignore="UnusedAttribute" />


    </LinearLayout>

</LinearLayout>