<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/bg_primary"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autoSizeTextType="uniform"
            android:layout_marginTop="45dp"
            android:fontFamily="@font/bold_height_regular"
            android:gravity="center"
            android:text="@string/welcome"
            android:textColor="@color/white"
            android:textSize="40sp"
            tools:targetApi="o" />

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/drawer_btn"
            android:layout_width="228dp"
            android:layout_height="210dp"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            app:lottie_autoPlay="true"
            app:lottie_rawRes="@raw/main_bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:autoSizeTextType="uniform"
            android:layout_marginTop="60dp"
            android:fontFamily="@font/astronaut"
            android:gravity="center"
            android:text="@string/qrCode"
            android:textColor="@color/white"
            android:textSize="80sp"
            tools:targetApi="o" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autoSizeTextType="uniform"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/astronaut"
            android:gravity="center"
            android:text="@string/registry"
            android:textColor="@color/white"
            android:textSize="80sp"
            tools:targetApi="o" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:gravity="bottom"
            android:orientation="vertical"
            android:layout_marginBottom="30dp">

            <TextView
                android:id="@+id/powered"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autoSizeTextType="uniform"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="80dp"
                android:gravity="center_horizontal"
                android:fontFamily="@font/harmony"
                android:text="@string/powered_by"
                android:textColor="@color/black"
                android:textSize="50sp"
                android:textStyle="bold"
                tools:targetApi="o" />
        </LinearLayout>


    </LinearLayout>
</LinearLayout>