<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".User.UserLogin"
    android:background="@color/Primary"
    android:orientation="vertical"
    android:transitionName="transition_login"
    tools:targetApi="o" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/Primary">


            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/ic_user_login"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                tools:ignore="ContentDescription" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autoSizeTextType="uniform"
                android:text="@string/loginWith"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:textSize="17sp"
                android:textColor="@color/white"
                tools:targetApi="o" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autoSizeTextType="uniform"
                android:layout_marginTop="8dp"
                android:text="@string/app_name"
                android:layout_gravity="center"
                android:textAllCaps="true"
                android:textStyle="bold"
                android:textSize="35sp"
                android:textColor="@color/white"
                android:layout_marginBottom="10dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginTop="100dp"
            android:layout_marginHorizontal="5dp"
            android:background="@drawable/bg_lower">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="20dp">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/et_phoneNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autoSizeTextType="uniform"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:hint="@string/signUpPhone"
                    android:textColorHint="@color/black"
                    app:boxStrokeColor="@color/black"
                    app:boxStrokeWidth="1dp"
                    app:prefixText="+91"
                    app:prefixTextColor="@color/hintBlack"
                    android:layout_marginTop="20dp"
                    app:endIconMode="clear_text"
                    app:endIconTint="@color/black"
                    app:hintTextColor="@color/black"
                    app:startIconDrawable="@drawable/ic_phone"
                    app:startIconTint="@color/black">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="55dp"
                        android:textSize="20sp"
                        android:autoSizeTextType="uniform"
                        android:fontFamily="@font/my_fav_sans_number"
                        android:inputType="number"
                        android:textColor="@color/black"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/et_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autoSizeTextType="uniform"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:hint="@string/signUpPassword"
                    android:textColorHint="@color/black"
                    app:boxStrokeColor="@color/black"
                    app:boxStrokeWidth="1dp"
                    android:layout_marginTop="20dp"
                    app:endIconMode="password_toggle"
                    app:endIconTint="@color/black"
                    app:hintTextColor="@color/black"
                    app:startIconDrawable="@drawable/ic_password"
                    app:startIconTint="@color/black">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="55dp"
                        android:autoSizeTextType="uniform"
                        android:textSize="20sp"
                        android:inputType="textPassword"
                        android:textColor="@color/black"/>
                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/astronaut"
                android:gravity="center"
                app:strokeWidth="1dp"
                app:strokeColor="@color/black"
                android:backgroundTint="@color/Primary"
                app:cornerRadius="5dp"
                android:text="@string/login"
                android:textColor="@color/white"
                android:textSize="25sp"
                android:transitionName="transition_signUp"
                tools:targetApi="lollipop" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_backSignUp"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:layout_marginHorizontal="20dp"
                android:layout_marginBottom="20dp"
                android:backgroundTint="@color/white"
                android:fontFamily="@font/astronaut"
                android:gravity="center"
                android:text="@string/SignUp"
                android:textColor="@color/Primary"
                android:textSize="25sp"
                android:transitionName="transition_signUp"
                app:cornerRadius="5dp"
                app:strokeColor="@color/Primary"
                app:strokeWidth="1dp"/>

        </LinearLayout>


    </LinearLayout>

</ScrollView>